# petique-app

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .dockerignore  Dockerfile  gabbar.txt  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 15a8cf29de00_initial_schema_changes.py  1d8d1e3be641_initial_migration_with_all_tables.py  2363493ee52f_add_role_to_users_and_restore_vet_fks.py  9f280dd87bb0_drop_vet_id_from_vet_working_hours.py  e4d3d7c4cd31_pets_table_has_pk_as_id.py
backend/app/api/v1/: bookings.py  pets.py  users.py  vets.py
backend/app/core/: security.py
backend/app/crud/: bookings.py  pets.py  users.py  vet_time_off.py  vet_working_hours.py  vets.py
backend/app/models/: __init__.py  base.py  bookings.py  enums.py  pets.py  users.py  vet_time_off.py  vet_working_hours.py  vets.py
backend/app/schema/: bookings.py  database.py  pets.py  users.py  vet_time_off.py  vet_working_hours.py  vets.py
frontend/petique-frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/petique-frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/petique-frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx
frontend/petique-frontend/src/components/ui/: EmptyState.tsx  Modal.tsx  StatCard.tsx  StatusBadge.tsx
frontend/petique-frontend/src/lib/: api.ts  auth.ts
frontend/petique-frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx
frontend/petique-frontend/src/routes/: ProtectedRoute.tsx  RoleRoute.tsx
(+10 files in other folders)
